kubernetes-dashboard/hello-kubernetes.yaml
# This YAML file deploys the hello-kubernetes image using a deployment and a service

apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-kubernetes
  namespace: kubernetes-dashboard
spec:
  selector:
    matchLabels:
      app: hello-kubernetes
  replicas: 1
  template:
    metadata:
      labels:
        app: hello-kubernetes
    spec:
      containers:
      - name: hello-kubernetes
        image: paulbouwer/hello-kubernetes:1.10
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hello-kubernetes
  namespace: kubernetes-dashboard
spec:
  selector:
    app: hello-kubernetes
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
