kubernetes-dashboard/ms365-oauth2-proxy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ms365-oauth2-ingress
  namespace: kubernetes-dashboard
spec:
  tls:
    - hosts:
        - kubernetes.unibuc.ro
      secretName: kubernetes-unibuc-ro-tls
  rules:
    - host: kubernetes.unibuc.ro
      http:
        paths:
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: ms365-oauth2-proxy
                port:
                  number: 80
